// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ssr basic 1`] = `

<style data-emotion-ssr="1lrxbo5">
  .css-1lrxbo5{color:hotpink;}
</style>
<div class="css-1lrxbo5">
  some hotpink text
</div>

`;

exports[`ssr className 1`] = `

<div data-reactroot>
  <style data-emotion-ssr="181qz4b">
    .css-181qz4b{color:hotpink;}
  </style>
  <div class="css-181qz4b">
  </div>
</div>

`;

exports[`ssr dynamic 1`] = `

<style data-emotion-ssr="1lrxbo5">
  .css-1lrxbo5{color:hotpink;}
</style>
<div class="css-1lrxbo5">
</div>

`;

exports[`ssr global 1`] = `

<style data-emotion-ssr="6l7sk3">
  html{background-color:hotpink;}
</style>

`;

exports[`ssr keyframes 1`] = `

<style data-emotion-ssr="animation-1kyaq4y">
  @-webkit-keyframes animation-1kyaq4y{from{color:green;}to{color:blue;}}@keyframes animation-1kyaq4y{from{color:green;}to{color:blue;}}
</style>
<style data-emotion-ssr="q9uc0r">
  .css-q9uc0r{-webkit-animation:1s animation-1kyaq4y;animation:1s animation-1kyaq4y;}
</style>
<div class="css-q9uc0r">
</div>

`;

exports[`ssr only render a style once with Style 1`] = `

<style data-emotion-ssr="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-ssr="181qz4b">
    .css-181qz4b{color:hotpink;}
  </style>
  <div class="css-181qz4b">
  </div>
</div>

`;

exports[`ssr only render a style once with styled 1`] = `

<style data-emotion-ssr="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-ssr="181qz4b">
    .css-181qz4b{color:hotpink;}
  </style>
  <div class="css-181qz4b">
  </div>
  <div class="css-181qz4b">
  </div>
</div>

`;

exports[`ssr only render a style once with the css prop 1`] = `

<style data-emotion-ssr="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-ssr="1lrxbo5">
    .css-1lrxbo5{color:hotpink;}
  </style>
  <div class="css-1lrxbo5">
  </div>
  <div class="css-1lrxbo5">
  </div>
</div>

`;
